[package]
name = "hello-world"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[example]]
name = "minigrep"
path = "src/examples/minigrep.rs"

[dependencies]
thread_local = "1.1"
tokio = { version = "1.28.2", features = ["full"] }
chrono = "0.4"
futures = "0.3"
